[package]
name = "reqwest_stream"
version = "0.0.0"
workspace = "../../"
edition = "2018"
publish = false

[dependencies]
rocket = { path = "../../core/lib" }
reqwest = { version = "0.11.0", features = ["stream"] }
tokio-util = { version = "0.6.1", features = ["io"] }
tokio-stream = "0.1.2"
async-stream = "0.3.0"
